# fprime-visual

./: .gitignore  .sample--fpv-env  README.md  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: publish.yml  pytest.yml
Ref/: CmdReply.json  FaultProtection.json  Telemetry.json  TextEvents.json
examples/: CmdDisp.json  CmdReg.json  CommDriver.json  Downlink.json  Events.json  Health.json  Parameters.json  RateGroups.json  Ref.json  Sequencer.json  Time.json  Uplink.json
public/: index.html
public/css/: style.css
public/js/: script.js
public/js/classes/: box.js
public/js/themes/: dark.js  default.js
server/: index.js
server/controllers/: create-env.js  get-file-list.js  get-file.js  get-folder-list.js
server/helpers/: checkFolder.js  customEnv.js
src/fprime_visual/: __main__.py
src/fprime_visual/flask/: app.py
src/fprime_visual/flask/static/: index.html
src/fprime_visual/flask/static/css/: style.css
src/fprime_visual/flask/static/js/: canvas.js  canvas2.js  draw-graph.js  helpers.js  parse-data.js  script.js  typedefs.js
src/fprime_visual/flask/static/js/classes/: box.js
src/fprime_visual/flask/static/js/layout/: basic-layout.js
src/fprime_visual/flask/static/js/layouts/: basic-layout.js
src/fprime_visual/flask/static/js/renderers/: index.js  render-basic.js  render-elk.js  render-utils.js
src/fprime_visual/flask/static/js/renderers/helpers/: box.js  render-utils.js
src/fprime_visual/flask/static/js/themes/: dark-blue.js  light-seafoam.js  new-light.js
src/fprime_visual/flask/static/js/v2/renderers/: render-elk.js  render-utils.js
src/fprime_visual/flask/templates/: index.html
test/: test_flask_app.py
